samples/_failures_safe/1761395624_466a88_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_03ecfc4a.c: In function ‘main’:
./samples/SAFE/__tmp_03ecfc4a.c:148:9: error: expected declaration or statement at end of input
  148 |         printf("No input provided.\n");
      |         ^~~~~~
./samples/SAFE/__tmp_03ecfc4a.c:148:9: error: expected declaration or statement at end of input
